--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>thebestthingever</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="main">
-        <p>Ç</p>
+        <p id="paragraph">Ç</p>
     </div>
 </body>
+<script src="scripts/script.js"></script>
 </html>
